apps/nginx/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: dev-nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: dev-proxy-conf
              mounthPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes:
        - name: dev-nginx-confƒ
          configMap:
            name: dev-nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: dev-proxy-conf
          configMap:
            name: dev-proxy-conf
            items:
              - key: nginx.conf
                path: nginx.conf
