apps/nginx/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-name: ingress
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: nginx-ingress
    env: dev
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: dev-nginx-svc
      port:
        number: 80
  rules:
    - http:
        paths:
        - backend:
            service:
              name: dev-nginx-svc
              port:
                number: 80
          path: /
          pathType: Prefix
